Small Bug Fix and Clean up.
Fixed bug where the AI could not align with target properly depending on the tile size / window size. Small code clean up.

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-*{
-    background-image: url("temp_background_2.jpg");
+* {
+    background-color: #98c8d6;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-size: 100% 100%;
 }
 
 .App {
@@ -12,12 +12,12 @@
 }
 
 .GameCanvas {
-    background: #b5af42;
+    background: #FFDDAA;
     width: 50%;
     height: 50%;
     padding: 0;
     margin: auto;
     display: block;
-    border: 4px solid #3a5122;
-    border-radius: 45px;
+    border: 4px solid #000000;
+    border-radius: 35px;
 }
